# db_code_gen

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  filters.rs  information_schema.rs  main.rs  table.rs
templates/: model.tera  models.tera  repositories.tera  repository.tera
