[package]
name = "db_code_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
convert_case = "0.6.0"
dotenvy = "0.15.7"
futures = "0.3.28"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
sql-builder = "3.1.1"
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-native-tls",
    "chrono",
    "mysql",
    "uuid",
] }
tera = "1.18.1"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
